--- a/Arrow website/package_designerseries.html
+++ b/Arrow website/package_designerseries.html
@@ -90,6 +90,12 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 	#bowltitle2 {
 		display:none;
 	}
+	#bowltitle4 {
+		display:none;
+	}
+	#bowltitle6 {
+		display:none;
+	}
 	.producticons {
 		display:none;
 	}
